force-app/main/default/objects/xbeamprod__Overlap__c/xbeamprod__Overlap__c.object-meta.xml
<CustomObject>
    <label>Crossbeam Ecosystem Overlap</label>
    <nameField>
        <label>Overlap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crossbeam Ecosystem Overlaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>