force-app/main/default/objects/xbeamprod__Overlap__c/fields/xbeamprod__Partner_Record_Employees__c.field-meta.xml
<CustomField>
    <fullName>xbeamprod__Partner_Record_Employees__c</fullName>
    <label>Partner Record Employees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>