force-app/main/default/objects/xbeamprod__Overlap__c/fields/xbeamprod__Partner_Record_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>xbeamprod__Partner_Record_Owner_Title__c</fullName>
    <label>Partner Record Owner Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>